<resources>
    <string name="app_name">Mood Films</string>
    <string name="mood_films">Mood Films</string>
    <string name="titre">Titre</string>
    <string name="entrez_les_informations">Entrez les informations :</string>
    <string name="r_alisateur">Réalisateur</string>
    <string name="date_de_sortie">Date de sortie</string>
    <string name="bande_originale">Bande originale</string>
    <string name="humeur_s">Humeur(s)</string>
    <string name="trailer">Trailer</string>
    <string name="synopsis">Synopsis</string>
    <string name="image">Image</string>
    <string name="ajouter">Ajouter</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Supprimer</string>
    <string name="view">View</string>
</resources>