<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/texttitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/entrez_les_informations"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/texttitle"
        android:hint="@string/titre"
        android:inputType="text"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/realisateur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/r_alisateur"
        android:textSize="24dp"
        android:layout_below="@+id/title"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/release"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_de_sortie"
        android:textSize="24dp"
        android:layout_below="@+id/realisateur"
        android:inputType="text"/>

    <EditText
        android:id="@+id/soundtrack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bande_originale"
        android:textSize="24dp"
        android:layout_below="@+id/release"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/mood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/humeur_s"
        android:textSize="24dp"
        android:layout_below="@+id/soundtrack"
        android:inputType="text"/>

    <EditText
        android:id="@+id/trailer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/trailer"
        android:textSize="24dp"
        android:layout_below="@+id/mood"
        android:inputType="text"/>

    <EditText
        android:id="@+id/synopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/synopsis"
        android:textSize="24dp"
        android:layout_below="@+id/trailer"
        android:inputType="text"/>

    <EditText
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/image"
        android:textSize="24dp"
        android:layout_below="@+id/synopsis"
        android:inputType="text"/>

    <Button
        android:id="@+id/btnInsert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginTop="5dp"
        android:text="@string/ajouter"
        android:textSize="24dp" />
    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:text="@string/modifier"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/btnInsert"/>
    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:text="@string/supprimer"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/btnUpdate"/>

    <Button
        android:id="@+id/btnView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnDelete"
        android:layout_marginTop="5dp"
        android:text="@string/view"
        android:textSize="24dp" />

</RelativeLayout>